Registraion_ 이메일 형식 유효성 검사 로직 및 ui 구현 + 모든 textField 입력시 계정 생성

--- a/todoDiary/Base.lproj/Main.storyboard
+++ b/todoDiary/Base.lproj/Main.storyboard
@@ -30,6 +30,9 @@
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="checkValidationId:" destination="bpX-cz-m4j" eventType="editingChanged" id="Q6v-gq-DJW"/>
+                                        </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* 아이디 에러" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sBx-ed-ZGd">
                                         <rect key="frame" x="58" y="73" width="306" height="12"/>
@@ -55,6 +58,9 @@
                                         <rect key="frame" x="50" y="145" width="314" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <connections>
+                                            <action selector="checkName:" destination="bpX-cz-m4j" eventType="editingChanged" id="Rlf-Ny-v0u"/>
+                                        </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* 이름 에러" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PVR-LD-q4g">
                                         <rect key="frame" x="58" y="181" width="306" height="12"/>
